--- a/module1/lesson18/task3/index.html
+++ b/module1/lesson18/task3/index.html
@@ -8,6 +8,6 @@
     <title>Webpack</title>
   </head>
   <body>
-    <script src="index.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
